--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,17 +14,125 @@
         android:layout_height="match_parent"
         tools:context=".ui.login.LoginActivity">
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/line_login_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="@dimen/app_padding_hr" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/line_login_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="@dimen/app_padding_hr" />
+
+        <com.heechan.membeder.ui.view.header.NavigationHeader
+            android:id="@+id/hd_singUp1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="14sp"
+            android:text="오랜만이에요"
+            android:textFontWeight="700"
+
+            android:textSize="22sp"
+
+            app:layout_constraintStart_toStartOf="@id/line_login_start"
+            app:layout_constraintTop_toBottomOf="@id/hd_singUp1"
+            tools:ignore="UnusedAttribute" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="저희 같이 일해볼까요?"
+            android:textColor="?attr/colorPrimary"
+
+            android:textFontWeight="700"
+
+            android:textSize="22sp"
+            app:layout_constraintStart_toStartOf="@id/line_login_start"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            tools:ignore="UnusedAttribute" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="기존에 사용한 계정의 정보를 입력해주세요."
+
+            android:textColor="@color/gray300"
+
+            android:textSize="13sp"
+            app:layout_constraintStart_toStartOf="@id/line_login_start"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+        <EditText
+            android:id="@+id/edt_login_email"
+            style="@style/edt_icon_style"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="23dp"
+            android:drawableStart="@drawable/ic_email"
+
+            android:hint="이메일을 입력해주세요"
+
+            android:text="@={vm.email}"
+            android:inputType="textEmailAddress"
+
+            app:layout_constraintEnd_toEndOf="@id/line_login_end"
+            app:layout_constraintStart_toStartOf="@id/line_login_start"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <EditText
+            android:id="@+id/edt_login_password"
+            style="@style/edt_icon_style"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="8dp"
+            android:drawableStart="@drawable/ic_lock"
+
+            android:hint="비밀번호를 입력해주세요"
+            android:inputType="textPassword"
+
+            android:text="@={vm.password}"
+
+            app:layout_constraintEnd_toEndOf="@id/line_login_end"
+            app:layout_constraintStart_toStartOf="@id/line_login_start"
+            app:layout_constraintTop_toBottomOf="@+id/edt_login_email" />
+
+
         <Button
             android:id="@+id/btn_login_submit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
-            android:text="로그인"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="다음"
+
+            android:layout_marginTop="12dp"
+
+            app:layout_constraintTop_toBottomOf="@id/edt_login_password"
+            app:layout_constraintEnd_toEndOf="@id/line_login_end"
+            app:layout_constraintStart_toStartOf="@id/line_login_start" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
