--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,18 +14,19 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/nav_register"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-
             android:name="androidx.navigation.fragment.NavHostFragment"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/nv_register"
+            android:layout_width="0dp"
 
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_height="0dp"
+            app:defaultNavHost="true"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:navGraph="@navigation/nv_register" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
